force-app/main/default/objects/Object__c/Object__c.object-meta.xml
<CustomObject>
    <label>Object</label>
    <nameField>
        <label>Object</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Object</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>