force-app/main/default/objects/Object__c/fields/FIELD100__c.field-meta.xml
<CustomField>
    <fullName>FIELD100__c</fullName>
    <label>FIELD100</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>