force-app/main/default/objects/Object__c/fields/FIELD101__c.field-meta.xml
<CustomField>
    <fullName>FIELD101__c</fullName>
    <label>FIELD101</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>