force-app/main/default/objects/Object__c/fields/FIELD102__c.field-meta.xml
<CustomField>
    <fullName>FIELD102__c</fullName>
    <label>FIELD102</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>