force-app/main/default/objects/Object__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FIELD__c</columns>
    <columns>FIELD2__c</columns>
    <columns>FIELD3__c</columns>
    <columns>FIELD4__c</columns>
    <columns>FIELD5__c</columns>
    <columns>FIELD6__c</columns>
    <columns>FIELD7__c</columns>
    <columns>FIELD8__c</columns>
    <columns>FIELD9__c</columns>
    <columns>FIELD10__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>